--- a/src/components/photo-viewer/photo-viewer/photo-viewer.component.less
+++ b/src/components/photo-viewer/photo-viewer/photo-viewer.component.less
@@ -1,17 +1,19 @@
+.photo-viewer-container {
+  .form {
+    width: 45%;
+  }
 
-.photo-viewer-container{
-
-	.cards{
-		display: flex;
-		justify-content: space-between;
-		flex-wrap: wrap;
-		.card{
-			margin-top:1rem;
-		}
-	  .random-text{
-		  display: flex;
-		  align-items: center;
-		  justify-content: center;
-	  }
-	}
+  .cards {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .card {
+      margin-top: 1rem;
+    }
+    .random-text {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
 }
